addons/wayne/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: infra-wayne
  name: infra-wayne
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: infra-wayne
